--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
   <img src="pt.JPG" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="text">Caption Three four and five</div>
 </div>
 
 </div>
@@ -117,7 +117,7 @@ showSlides();
 
 function showSlides() {
   var i;
-  var slides = document.getElementsByClassName("mySlides");
+  var slides = document.getElementsByClassName ("mySlides");
   var dots = document.getElementsByClassName("dot");
   for (i = 0; i < slides.length; i++) {
     slides[i].style.display = "none";  
