--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
   <img src="pt.JPG" style="width:100%">
-  <div class="text">Caption Three four and five</div>
+  <div class="text">Caption Three four and five erick gregory</div>
 </div>
 
 </div>
